<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral10"
    tools:context=".AgregarNotas">

    <TextView
        android:id="@+id/txt_tituloPaginaNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/AgregarNota"
        android:textSize="24dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_TextNota"
        android:layout_width="318dp"
        android:layout_height="41dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="Titulo"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/material_dynamic_neutral30"
        app:layout_constraintBottom_toTopOf="@+id/txt_Nota_contenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_Nota_contenido"
        android:layout_width="323dp"
        android:layout_height="167dp"
        android:layout_marginBottom="112dp"
        android:ems="10"
        android:gravity="top"
        android:textColor="@color/white"
        android:hint="Escribe tu nota aqui"
        android:inputType="textMultiLine"
        android:textColorHint="@color/material_dynamic_neutral30"
        app:layout_constraintBottom_toTopOf="@+id/btn_GuardarNota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_GuardarNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_GuardarNota"
        app:layout_constraintBottom_toTopOf="@+id/btn_RecuperarNota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_RecuperarNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/btn_recuperar_Nota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>